--- a/client/package.json
+++ b/client/package.json
@@ -11,13 +11,26 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emotion/react": "^11.11.4",
+    "@headlessui/react": "^2.1.1",
+    "axios": "^1.7.2",
     "firebase": "^10.12.2",
+    "moment": "^2.30.1",
     "prop-types": "^15.8.1",
     "react": "^18.3.1",
+    "react-awesome-reveal": "^4.2.12",
+    "react-countup": "^6.5.3",
     "react-dom": "^18.3.1",
+    "react-helmet-async": "^2.0.5",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^5.2.1",
+    "react-rating": "^2.0.5",
     "react-router-dom": "^6.23.1",
+    "react-scroll-trigger": "^0.6.14",
+    "react-simple-typewriter": "^5.0.1",
+    "react-spinners": "^0.14.1",
+    "react-tooltip": "^5.27.0",
+    "sweetalert2": "^11.12.1",
     "swiper": "^11.1.4"
   },
   "devDependencies": {
@@ -25,6 +38,7 @@
     "@types/react-dom": "^18.3.0",
     "@vitejs/plugin-react": "^4.3.1",
     "autoprefixer": "^10.4.19",
+    "daisyui": "^4.12.10",
     "eslint": "^8.57.0",
     "eslint-plugin-react": "^7.34.2",
     "eslint-plugin-react-hooks": "^4.6.2",
